[package]
name = "wasm_board_games"
description = "TicTacTo and Four-in-a-row in Rust WASM with web-worker"
version = "0.3.1"
authors = ["Simon B. Gasse"]
edition = "2021"
repository = "https://github.com/sgasse/wasm_board_games"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.59"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3.59"
features = ['console']
